Add add functions to manage content of list

--- a/ListaProduktow/ListaProduktow/ListaProduktow.csproj
+++ b/ListaProduktow/ListaProduktow/ListaProduktow.csproj
@@ -17,7 +17,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="ManageProdukt.xaml">
+    <Compile Update="ManageProduct.xaml.cs">
+      <DependentUpon>ManageProduct.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="ManageProduct.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
